@@ -59,6 +59,8 @@ Minor changes:
    request. Controlled via options.h [SW]
  * New lock, @lock/dropin, controls who can drop objects into that
    location. [SW]
+ * @ps now shows a running average of the number of queue entries
+   executed per second. [SW]
 
 Fixes:
  * When regexp matching an ansi'd string, named captures weren't set
